Cancel notifications for deleted dashboards

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -75,6 +75,7 @@
   "journalTagsRemoveHint": "Remove tag",
   "journalToolbarSaveHint": "Save entry",
   "journalUnlinkText": "Unlink entry",
+  "maintenanceCancelNotifications": "Cancel all notifications",
   "maintenanceDeleteEditorDb": "Delete editor drafts database",
   "maintenanceDeleteLoggingDb": "Delete logging database",
   "maintenanceDeleteTagged": "Delete tagged",
