more romanian language translations

--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -1,4 +1,19 @@
 {
+  "addActionAddAudioRecording": "Adauga inregistrare audio",
+  "addActionAddMeasurable": "Adauga masuratoare",
+  "addActionAddPhotos": "Adauga fotografie",
+  "addActionAddScreenshot": "Adauga captura de ecran",
+  "addActionAddSurvey": "Adauga sondaj",
+  "addActionAddTask": "Adauga sarcina",
+  "addActionAddText": "Adauga text",
+  "addActionAddTimeRecording": "Adauga timp",
+  "addAudioTitle": "Adauga titlu",
+  "addEntryTitle": "Titlu",
+  "addMeasurementNoneDefined": "Nicio masuratoare definita",
+  "addMeasurementSaveButton": "Salveaza masuratoare",
+  "addMeasurementTitle": "Titlu masuratoare",
+  "addSurveyTitle": "Titlu sondaj",
+  "addTaskTitle": "Titlu sarcina",
   "configFlagEnableNotifications": "Activează notificările pe desktop?",
   "configFlagGlobalScreenshotHotkey": "Ascultă după combinația de screenshot globală?",
   "configFlagHideForScreenshot": "Ascunde Lotti când faci captura de ecran?",
@@ -8,16 +23,17 @@
   "conflictsUnresolved": "nerezolvat",
   "dashboardActiveLabel": "Activ:",
   "dashboardAddChartsTitle": "Adaugă diagramă:",
-  "dashboardAddHealthButton": "Diagrame de sănătate",
-  "dashboardAddHealthTitle": "Diagrame de sănătate",
-  "dashboardAddMeasurementButton": "Diagrame de măsurătoare",
-  "dashboardAddMeasurementTitle": "Diagrame de măsurătoare",
+  "dashboardAddHealthButton": "Bord de sănătate",
+  "dashboardAddHealthTitle": "Bord de sănătate",
+  "dashboardAddMeasurementButton": "Bord de măsurătoari",
+  "dashboardAddMeasurementTitle": "Bord de măsurătoari",
   "dashboardAddStoryButton": "Articol/Timp Grafic",
   "dashboardAddStoryTitle": "Articol/Timp Grafic",
   "dashboardAddSurveyButton": "Diagrame de Studiu",
   "dashboardAddSurveyTitle": "Diagrame de Studiu",
-  "dashboardAddWorkoutButton": "Grafic Antrenament",
-  "dashboardAddWorkoutTitle": "Grafic Antrenament",
+  "dashboardAddWorkoutButton": "Bord de Antrenament",
+  "dashboardAddWorkoutTitle": "Bord de Antrenament",
+  "dashboardAggregationLabel": "Agregare",
   "dashboardCopyHint": "Salvează și copiază configurația tabloului de bord",
   "dashboardDeleteConfirm": "DA, ȘTERGE ACEST TABLOU DE BORD",
   "dashboardDeleteHint": "Șterge tablou de bord",
@@ -28,6 +44,9 @@
   "dashboardPrivateLabel": "Privat:",
   "dashboardReviewTimeLabel": "Daily Review Time:",
   "dashboardSaveLabel": "Salvează și închide",
+  "dashboardsEmptyHint": "Nimic de vazut aici, creaza un nou panou de bord in setari. \n\n Butonul cu roti dintate de mai sus te va duce acolo.",
+  "dashboardsLoadingHint": "Se incarca ..",
+  "entryNotFound": "Nu am gasit",
   "journalDateFromLabel": "De la:",
   "journalDateInvalid": "Dată invalidă",
   "journalDateNowButton": "acum",
@@ -56,11 +75,18 @@
   "journalTagsRemoveHint": "Înlătură eticheta",
   "journalToolbarSaveHint": "Salvează intrarea",
   "journalUnlinkText": "Dezleagă intrarea",
+  "maintenanceCancelNotifications": "Anuleaza notificarile",
   "maintenanceDeleteEditorDb": "Șterge ciornele din baza de date",
   "maintenanceDeleteLoggingDb": "Șterge log-urile din baza de date",
   "maintenanceDeleteTagged": "Șterge etichetat",
+  "maintenancePurgeDeleted": "",
   "maintenanceRecreateTagged": "Recrează etichetat",
+  "maintenanceReprocessSync": "Reproceseaza sincronizare",
   "maintenanceStories": "Alocă poveștile din intrările părinte",
+  "manualLinkText": "pentru mai multe informatii, consulta manualul.",
+  "measurableDeleteConfirm": "DA, CONFIRM STERGEREA",
+  "measurableDeleteQuestion": "Vrei sa stergi acest tip de masuratoare?",
+  "measurableNotFound": "Masuratoarea nu a fost gasita",
   "navTabTitleFlagged": "Marcat",
   "navTabTitleInsights": "Informaţii",
   "navTabTitleJournal": "Jurnal",
@@ -72,6 +98,8 @@
   "outboxMonitorLabelSent": "trimis",
   "outboxMonitorNoAttachment": "fără atașament",
   "outboxMonitorRetries": "reîncercare",
+  "outboxMonitorRetry": "reincercare",
+  "outboxMonitorSwitchLabel": "pornit",
   "settingsAdvancedTitle": "Setari Avansate",
   "settingsConflictsTitle": "Sync cu conflicte",
   "settingsDashboardsSearchHint": "Caută...",
@@ -98,6 +126,8 @@
   "settingsSyncCopyButton": "Copiază",
   "settingsSyncCopyCfg": "Copiază SyncConfig în Clipboard?",
   "settingsSyncCopyCfgWarning": "Cu aceste setare, oricine îți poate citi jurnalul. Copiază doar când știi ce faci. SIGUR VREI să continui cu această setare?",
+  "settingsSyncDeleteConfigButton": "Sterge configurare sincronizare",
+  "settingsSyncDeleteImapButton": "Sterge configurarea IMAP",
   "settingsSyncDeleteKeyButton": "Șterge Shared Key",
   "settingsSyncFolderLabel": "IMAP Folder",
   "settingsSyncGenKey": "Generează shared key...",
@@ -112,8 +142,11 @@
   "settingsSyncPasteCfg": "Import SyncConfig din Clipboard?",
   "settingsSyncPasteCfgWarning": "Vrei sa importi SyncConfig din Clipboard? ESTI SIGUR?",
   "settingsSyncPortLabel": "Port",
+  "settingsSyncReGenKeyButton": "Sterge cheia secreta",
   "settingsSyncSaveButton": "Salvează IMAP Config",
   "settingsSyncScanning": "Scaneaza Shared Secret...",
+  "settingsSyncSuccessCloseButton": "Inchide",
+  "settingsSyncTestConnectionButton": "Testeaza configurare IMAP",
   "settingsSyncUserLabel": "Utilizator",
   "settingsTagsDeleteTooltip": "Șterge eticheta",
   "settingsTagsHideLabel": "Ascunde din sugestii:",
@@ -126,12 +159,21 @@
   "settingsTagsTypePerson": "PERSOANA",
   "settingsTagsTypeStory": "POVESTE",
   "settingsTagsTypeTag": "ETICHETA",
+  "syncAssistantHeadline": "Asistent de sincronizare",
   "syncAssistantHeadline1": "Asistent Sync 1/3",
   "syncAssistantHeadline2": "Asistent Sync 2/3",
   "syncAssistantHeadline3": "Asistent Sync 3/3",
   "syncAssistantPage1": "Hai să începem să sincronizăm între Lotti pe Desktop și Lotti de pe telefonul mobil.",
   "syncAssistantPage2": "Comunicația se întâmplă fără că datele tale să circule printr-un serviciu de tip cloud. În loc de asta, îți folosești propriul email pentru a comunica între dispozitive prin mesaje criptate în folderul tău IMAP. Te rog să îți pui setările serverului mai sus.",
+  "syncAssistantPage2mobile": "Scaneaza te rog codul de bare generat cu setarile tale de pe urmatoarea pagina. Daca nu ai facut deja, te rog porneste configurarea de pe versiune de desktop",
   "syncAssistantPage3": "În plus, pe lângă propriul serviciu de email, este folosită encriptarea cu algoritmul AES-GCM , care folosește o cheie secretă că să comunice între dispozitivele tale. Vom genera această cheie secretă acum și apoi vom genera și un cod QR care conține informația. Te rog să ai grijă cum și cu cine împărți această informație căci conține toate informațiile de access la contul tău de email. Nu arată nimănui acest cod QR!!!",
+  "syncAssistantStatusEmpty": "Adauga detaliile de cont valide",
+  "syncAssistantStatusGenerating": "Generez un nou secret ..",
+  "syncAssistantStatusLoading": "Se incarca ..",
+  "syncAssistantStatusSaved": "Configurarea IMAP salvata.",
+  "syncAssistantStatusSuccess": "Contul a fost configurat cu succes.",
+  "syncAssistantStatusTesting": "Testez configurarea IMAP",
+  "syncAssistantStatusValid": "Contul este valid.",
   "taskDueLabel": "Sarcină de îndeplinit:",
   "taskEditHint": "Editează Sarcina",
   "taskEstimateLabel": "Timp Estimat:",
