--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -46,7 +46,13 @@
   "dashboardSaveLabel": "Save",
   "dashboardsEmptyHint": "Nothing to see here yet, please create a new Dashboard in Settings, Dashboard Management. \n\nThe cogs button above will take you there directly.",
   "dashboardsLoadingHint": "Loading...",
+  "editMenuTitle": "Edit",
   "entryNotFound": "Entry not found",
+  "fileMenuNewEllipsis": "New ...",
+  "fileMenuNewEntry": "New Entry",
+  "fileMenuNewScreenshot": "Screenshot",
+  "fileMenuNewTask": "Task",
+  "fileMenuTitle": "File",
   "journalDateFromLabel": "Date from:",
   "journalDateInvalid": "Invalid Date Range",
   "journalDateNowButton": "now",
@@ -183,5 +189,10 @@
   "taskStatusLabel": "Task status:",
   "taskStatusOnHold": "ON HOLD",
   "taskStatusOpen": "OPEN",
-  "taskStatusRejected": "REJECTED"
+  "taskStatusRejected": "REJECTED",
+  "viewMenuDisableBrightTheme": "Disable Bright Theme",
+  "viewMenuEnableBrightTheme": "Enable Bright Theme",
+  "viewMenuHideThemeConfig": "Hide Theme Config",
+  "viewMenuShowThemeConfig": "Show Theme Config",
+  "viewMenuTitle": "View"
 }
