--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -62,6 +62,7 @@
   "journalDeleteConfirm": "YES, DELETE THIS ENTRY",
   "journalDeleteHint": "Delete entry",
   "journalDeleteQuestion": "Do you want to delete this journal entry?",
+  "journalDurationLabel": "Duration:",
   "journalFavoriteTooltip": "Favorite",
   "journalFlaggedTooltip": "Flag",
   "journalHideMapHint": "Hide map",
