--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -132,10 +132,11 @@
   "settingsPlaygroundTitle": "Developer Playground",
   "settingsPlaygroundTutorialTitle": "Run Sliding Tutorial",
   "settingsSyncCancelButton": "Cancel",
+  "settingsSyncCloseButton": "Close",
   "settingsSyncCfgTitle": "Sync Assistant",
   "settingsSyncCopyButton": "Copy",
   "settingsSyncCopyCfg": "Copy SyncConfig to Clipboard?",
-  "settingsSyncCopyCfgWarning": "With this data, anyone can read your journal. Only copy when you know what you're doing. ARE YOU SURE you want to proceed?",
+  "settingsSyncCopyCfgWarning": "The SyncConfig is encrypted since with this data, anyone can read your journal. A random one-time password for decryption will be shown after copying. Keep open or note in a safe place, it will not be shown again. ARE YOU SURE you want to proceed?",
   "settingsSyncDeleteConfigButton": "Delete Sync Configuration",
   "settingsSyncDeleteImapButton": "Delete IMAP Config",
   "settingsSyncDeleteKeyButton": "Delete Shared Key",
