Close measurement dialog with text button

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -6,6 +6,7 @@
   "addActionAddSurvey": "Fragebogen ausfüllen",
   "addActionAddTask": "Aufgabe hinzufügen",
   "addActionAddText": "Texteintrag hinzufügen",
+  "addMeasurementCancelButton": "Abbrechen",
   "addMeasurementNoneDefined": "Messbaren Datentyp hinzufügen",
   "addMeasurementSaveButton": "Speichern",
   "addMeasurementTitle": "Messbare Daten erfassen",
