--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,6 +9,7 @@
   "addActionAddTimeRecording": "Start Time Recording",
   "addAudioTitle": "Add Audio Recording",
   "addEntryTitle": "Add Text Entry",
+  "addMeasurementCancelButton": "Cancel",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
   "addMeasurementSaveButton": "Save",
   "addMeasurementTitle": "Add Measurement",
