Add optional comment field for measurement

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,6 +10,7 @@
   "addAudioTitle": "Add Audio Recording",
   "addEntryTitle": "Add Text Entry",
   "addMeasurementCancelButton": "Cancel",
+  "addMeasurementCommentLabel": "Comment",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
   "addMeasurementSaveButton": "Save",
   "addMeasurementTitle": "Add Measurement",
