--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -7,6 +7,7 @@
   "addActionAddTask": "Aufgabe hinzufügen",
   "addActionAddText": "Texteintrag hinzufügen",
   "addMeasurementCancelButton": "Abbrechen",
+  "addMeasurementCommentLabel": "Anmerkung",
   "addMeasurementNoneDefined": "Messbaren Datentyp hinzufügen",
   "addMeasurementSaveButton": "Speichern",
   "addMeasurementTitle": "Messbare Daten erfassen",
