Move version and entry count to about page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,6 +113,7 @@
   "outboxMonitorRetry": "retry",
   "outboxMonitorSwitchLabel": "enabled",
   "saveLabel": "Save",
+  "settingsAboutTitle": "About Lotti",
   "settingsAdvancedTitle": "Advanced Settings",
   "settingsConflictsTitle": "Sync Conflicts",
   "settingsDashboardsSearchHint": "Search...",
