Style: AppBar with leading text

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,7 @@
   "addMeasurementNoneDefined": "Add Measurable Data Type",
   "addMeasurementSaveButton": "Save",
   "addMeasurementTitle": "Add Measurement",
+  "appBarBack": "Back",
   "addSurveyTitle": "Fill Survey",
   "addTaskTitle": "Add Task",
   "configFlagEnableNotifications": "Enable desktop notifications?",
