Audio recording label

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,7 +7,7 @@
   "addActionAddTask": "Add Task",
   "addActionAddText": "Add Text Entry",
   "addActionAddTimeRecording": "Start Time Recording",
-  "addAudioTitle": "Add Audio Recording",
+  "addAudioTitle": "Audio Recording",
   "addEntryTitle": "Add Text Entry",
   "addMeasurementCancelButton": "Cancel",
   "addMeasurementCommentLabel": "Comment",
