Create & manage simple Habits

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -57,6 +57,9 @@
   "fileMenuNewScreenshot": "Screenshot",
   "fileMenuNewTask": "Task",
   "fileMenuTitle": "File",
+  "habitNotFound": "Habit not found",
+  "habitDeleteConfirm": "YES, DELETE THIS HABIT",
+  "habitDeleteQuestion": "Do you want to delete this habit?",
   "journalDateFromLabel": "Date from:",
   "journalDateInvalid": "Invalid Date Range",
   "journalDateNowButton": "now",
@@ -122,6 +125,15 @@
   "settingsDashboardsSearchHint": "Search...",
   "settingsDashboardsTitle": "Dashboard Management",
   "settingsFlagsTitle": "Config Flags",
+
+  "settingsHabitsTitle": "Habits",
+  "settingsHabitsDeleteTooltip": "Delete Habit",
+  "settingsHabitsDescriptionLabel": "Description (optional):",
+  "settingsHabitsFavoriteLabel": "Favorite: ",
+  "settingsHabitsNameLabel": "Habit name:",
+  "settingsHabitsPrivateLabel": "Private: ",
+  "settingsHabitsSaveLabel": "Save",
+  "settingsHabitsSearchHint": "Search...",
   "settingsHealthImportTitle": "Health Import",
   "settingsLogsTitle": "Logs",
   "settingsMaintenanceTitle": "Maintenance",
