--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,6 +9,8 @@
   "addActionAddTimeRecording": "Start Time Recording",
   "addAudioTitle": "Audio Recording",
   "addEntryTitle": "Add Text Entry",
+  "addHabitCommentLabel": "Comment",
+  "addHabitDateLabel": "Completed at",
   "addMeasurementCancelButton": "Cancel",
   "addMeasurementCommentLabel": "Comment",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
