--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -109,6 +109,7 @@
   "measurableDeleteQuestion": "Do you want to delete this measurable data type?",
   "measurableNotFound": "Measurable not found",
   "navTabTitleFlagged": "Flagged",
+  "navTabTitleHabits": "Habits",
   "navTabTitleInsights": "Dashboards",
   "navTabTitleJournal": "Journal",
   "navTabTitleSettings": "Settings",
