--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -61,6 +61,7 @@
   "fileMenuNewScreenshot": "Screenshot",
   "fileMenuNewTask": "Task",
   "fileMenuTitle": "File",
+  "habitActiveFromLabel": "Active from",
   "habitNotFound": "Habit not found",
   "habitDeleteConfirm": "YES, DELETE THIS HABIT",
   "habitDeleteQuestion": "Do you want to delete this habit?",
