--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -47,6 +47,12 @@
   "fileMenuNewScreenshot": "Bildschirmfoto",
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
+  "habitActiveFromLabel": "Aktiv von",
+  "habitNotFound": "Habit nicht gefunden",
+  "habitDeleteConfirm": "JA, HABIT löschen",
+  "habitDeleteQuestion": "Habit wirklich löschen?",
+  "habitsCompletedHeader": "Erledigt",
+  "habitsOpenHeader": "Offen",
   "journalDateFromLabel": "Beginn:",
   "journalDateInvalid": "Ungültige Zeitspanne",
   "journalDateNowButton": "jetzt",
