--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,6 +65,8 @@
   "habitNotFound": "Habit not found",
   "habitDeleteConfirm": "YES, DELETE THIS HABIT",
   "habitDeleteQuestion": "Do you want to delete this habit?",
+  "habitsCompletedHeader": "Completed",
+  "habitsOpenHeader": "Open",
   "journalDateFromLabel": "Date from:",
   "journalDateInvalid": "Invalid Date Range",
   "journalDateNowButton": "now",
@@ -131,7 +133,6 @@
   "settingsDashboardsSearchHint": "Search...",
   "settingsDashboardsTitle": "Dashboard Management",
   "settingsFlagsTitle": "Config Flags",
-
   "settingsHabitsTitle": "Habits",
   "settingsHabitsDeleteTooltip": "Delete Habit",
   "settingsHabitsDescriptionLabel": "Description (optional):",
