--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -47,7 +47,7 @@
   "fileMenuNewScreenshot": "Bildschirmfoto",
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
-  "habitActiveFromLabel": "Aktiv von",
+  "habitActiveFromLabel": "Aktiv ab",
   "habitNotFound": "Habit nicht gefunden",
   "habitDeleteConfirm": "JA, HABIT löschen",
   "habitDeleteQuestion": "Habit wirklich löschen?",
