--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,8 +65,10 @@
   "habitNotFound": "Habit not found",
   "habitDeleteConfirm": "YES, DELETE THIS HABIT",
   "habitDeleteQuestion": "Do you want to delete this habit?",
+  "habitShowFromLabel": "Show from",
   "habitsCompletedHeader": "Completed",
   "habitsOpenHeader": "Open",
+  "habitsPendingLaterHeader": "Pending later",
   "journalDateFromLabel": "Date from:",
   "journalDateInvalid": "Invalid Date Range",
   "journalDateNowButton": "now",
