--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,7 +10,10 @@
   "addAudioTitle": "Audio Recording",
   "addEntryTitle": "Add Text Entry",
   "addHabitCommentLabel": "Comment",
-  "addHabitDateLabel": "Completed at",
+  "addHabitDateLabel": "Recorded at",
+  "completeHabitFailButton": "Fail",
+  "completeHabitSkipButton": "Skip",
+  "completeHabitSuccessButton": "Success",
   "addMeasurementCancelButton": "Cancel",
   "addMeasurementCommentLabel": "Comment",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
