--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,7 +113,7 @@
   "maintenanceRecreateTagged": "Recreate tagged",
   "maintenanceReprocessSync": "Reprocess sync messages",
   "maintenanceStories": "Assign stories from parent entries",
-  "maintenanceSyncDefinitions": "Sync tags, measurables, dashboards",
+  "maintenanceSyncDefinitions": "Sync tags, measurables, dashboards, habits",
   "manualLinkText": "Check out the manual for more information",
   "measurableDeleteConfirm": "YES, DELETE THIS MEASURABLE",
   "measurableDeleteQuestion": "Do you want to delete this measurable data type?",
