Habits: add activeUntil field

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -48,6 +48,7 @@
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
   "habitActiveFromLabel": "Aktiv ab",
+  "habitActiveUntilLabel": "Aktiv bis",
   "habitNotFound": "Habit nicht gefunden",
   "habitDeleteConfirm": "JA, HABIT löschen",
   "habitDeleteQuestion": "Habit wirklich löschen?",
