--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,6 +65,7 @@
   "fileMenuNewTask": "Task",
   "fileMenuTitle": "File",
   "habitActiveFromLabel": "Active from",
+  "habitActiveUntilLabel": "Active until",
   "habitNotFound": "Habit not found",
   "habitDeleteConfirm": "YES, DELETE THIS HABIT",
   "habitDeleteQuestion": "Do you want to delete this habit?",
