Habits: bring back active from as expect success from

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -47,7 +47,7 @@
   "fileMenuNewScreenshot": "Bildschirmfoto",
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
-  "habitActiveFromLabel": "Aktiv ab",
+  "habitActiveFromLabel": "Erfolg erwartet ab",
   "habitActiveUntilLabel": "Aktiv bis",
   "habitNotFound": "Habit nicht gefunden",
   "habitDeleteConfirm": "JA, HABIT löschen",
