--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -64,7 +64,7 @@
   "fileMenuNewScreenshot": "Screenshot",
   "fileMenuNewTask": "Task",
   "fileMenuTitle": "File",
-  "habitActiveFromLabel": "Active from",
+  "habitActiveFromLabel": "Expect success from",
   "habitActiveUntilLabel": "Active until",
   "habitNotFound": "Habit not found",
   "habitDeleteConfirm": "YES, DELETE THIS HABIT",
