Assign default story when completing habit

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -149,6 +149,7 @@
   "settingsHabitsPrivateLabel": "Private: ",
   "settingsHabitsSaveLabel": "Save",
   "settingsHabitsSearchHint": "Search...",
+  "settingsHabitsStoryLabel": "Habit completion story",
   "settingsHealthImportTitle": "Health Import",
   "settingsLogsTitle": "Logs",
   "settingsMaintenanceTitle": "Maintenance",
