Unlink icon in editor toolbar instead of using Dismissable

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,6 +94,7 @@
   "journalLinkedFromLabel": "Linked from:",
   "journalLinkFromHint": "Link from",
   "journalLinkToHint": "Link to",
+  "journalUnlinkHint": "Unlink",
   "journalPrivateTooltip": "Private",
   "journalSearchHint": "Search journal...",
   "journalShareAudioHint": "Share audio",
