Adapt journal page to use CustomScrollView & replace search header

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -64,7 +64,7 @@
   "journalDeleteHint": "Eintrag löschen",
   "journalDeleteQuestion": "Eintrag wirklich löschen?",
   "journalFavoriteTooltip": "Favorit",
-  "journalFlaggedTooltip": "Wiedervorlage",
+  "journalFlaggedTooltip": "Flag",
   "journalHideMapHint": "Karte verstecken",
   "journalLinkedEntriesLabel": "Verlinkte Einträge:",
   "journalLinkedFromLabel": "Verlinkt von:",
