Move host id and next counter to settings db

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -115,6 +115,7 @@
   "maintenanceRecreateFts5": "Recreate full-text index",
   "maintenanceRecreateTagged": "Recreate tagged",
   "maintenanceReprocessSync": "Reprocess sync messages",
+  "maintenanceResetHostId": "Reset Host ID",
   "maintenanceStories": "Assign stories from parent entries",
   "maintenanceSyncDefinitions": "Sync tags, measurables, dashboards, habits",
   "manualLinkText": "Check out the manual for more information",
