Improved input field layout

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,12 +10,13 @@
   "addAudioTitle": "Audio Recording",
   "addEntryTitle": "Add Text Entry",
   "addHabitCommentLabel": "Comment",
-  "addHabitDateLabel": "Recorded at",
+  "addHabitDateLabel": "Completed at",
   "completeHabitFailButton": "Fail",
   "completeHabitSkipButton": "Skip",
   "completeHabitSuccessButton": "Success",
   "addMeasurementCancelButton": "Cancel",
   "addMeasurementCommentLabel": "Comment",
+  "addMeasurementDateLabel": "Observed at",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
   "addMeasurementSaveButton": "Save",
   "addMeasurementTitle": "Add Measurement",
