Add placeholder text in editor (English and German)

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -38,6 +38,7 @@
   "dashboardReviewTimeLabel": "Täglich erinnern um:",
   "dashboardSaveLabel": "Speichern",
   "editMenuTitle": "Bearbeiten",
+  "editorPlaceholder": "Notiz hinzufügen...",
   "entryNotFound": "Eintrag nicht gefunden",
   "fileMenuNewEllipsis": "Neu ...",
   "fileMenuNewEntry": "Neuer Texteintrag",
