--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -57,6 +57,7 @@
   "dashboardsHowToHint": "How to use Lotti",
   "dashboardsLoadingHint": "Loading...",
   "editMenuTitle": "Edit",
+  "editorPlaceholder": "Enter notes...",
   "entryNotFound": "Entry not found",
   "fileMenuNewEllipsis": "New ...",
   "fileMenuNewEntry": "New Entry",
