Segmented control for habit display filter

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -52,6 +52,10 @@
   "habitDeleteQuestion": "Habit wirklich löschen?",
   "habitsCompletedHeader": "Erledigt",
   "habitsOpenHeader": "Offen",
+  "habitsFilterOpenNow": "jetzt",
+  "habitsFilterPendingLater": "später",
+  "habitsFilterCompleted": "erledigt",
+  "habitsFilterAll": "alle",
   "journalDateFromLabel": "Beginn:",
   "journalDateInvalid": "Ungültige Zeitspanne",
   "journalDateNowButton": "jetzt",
