--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -73,6 +73,10 @@
   "habitsCompletedHeader": "Completed",
   "habitsOpenHeader": "Open",
   "habitsPendingLaterHeader": "Pending later",
+  "habitsFilterOpenNow": "due",
+  "habitsFilterPendingLater": "later",
+  "habitsFilterCompleted": "completed",
+  "habitsFilterAll": "all",
   "habitsLongerStreaksHeader": "Week-long streaks (or longer)",
   "habitsLongerStreaksEmptyHeader": "No week-long streaks at the moment",
   "habitsShortStreaksHeader": "Three day streaks (or longer)",
