Add search field for habits

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -73,6 +73,7 @@
   "habitsCompletedHeader": "Completed",
   "habitsOpenHeader": "Open",
   "habitsPendingLaterHeader": "Pending later",
+  "habitsSearchHint": "Search...",
   "habitsFilterOpenNow": "due",
   "habitsFilterPendingLater": "later",
   "habitsFilterCompleted": "done",
