Add Categories pages in Settings

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -108,6 +108,7 @@
   "settingsDashboardsSearchHint": "Suche...",
   "settingsDashboardsTitle": "Konfiguration Dashboards",
   "settingsFlagsTitle": "Konfigurations-Flags",
+  "settingsCategoriesTitle": "Kategorien",
   "settingsHealthImportTitle": "Import aus Health",
   "settingsLogsTitle": "Aktivitäts- und Fehlerprotokoll",
   "settingsMaintenanceTitle": "Wartung",
