--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -151,6 +151,8 @@
   "settingsDashboardsSearchHint": "Search...",
   "settingsDashboardsTitle": "Dashboard Management",
   "settingsFlagsTitle": "Config Flags",
+  "settingsCategoriesTitle": "Categories",
+  "settingsCategoriesNameLabel": "Category name:",
   "settingsHabitsTitle": "Habits",
   "settingsHabitsDeleteTooltip": "Delete Habit",
   "settingsHabitsDescriptionLabel": "Description (optional):",
