Add priority switch in habit, for more prominent display

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -45,6 +45,8 @@
   "fileMenuNewScreenshot": "Bildschirmfoto",
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
+  "habitActiveLabel": "Aktiv:",
+  "habitPriorityLabel": "Priorität:",
   "habitActiveFromLabel": "Erfolg erwartet ab",
   "habitActiveUntilLabel": "Aktiv bis",
   "habitNotFound": "Habit nicht gefunden",
