--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,6 +23,8 @@
   "appBarBack": "Back",
   "addSurveyTitle": "Fill Survey",
   "addTaskTitle": "Add Task",
+  "categoryDeleteConfirm": "YES, DELETE THIS CATEGORY",
+  "categoryDeleteQuestion": "Do you want to delete this category?",
   "configFlagEnableNotifications": "Enable desktop notifications?",
   "configInvalidCert": "Allow invalid SSL certificate?",
   "configFlagPrivate": "Show private entries?",
