Localize text buttons in estimated duration bottom sheet

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -6,7 +6,8 @@
   "addActionAddSurvey": "Fragebogen ausfüllen",
   "addActionAddTask": "Aufgabe hinzufügen",
   "addActionAddText": "Texteintrag hinzufügen",
-  "addMeasurementCancelButton": "Abbrechen",
+  "cancelButton": "Abbrechen",
+  "doneButton": "Fertig",
   "addMeasurementCommentLabel": "Anmerkung",
   "addMeasurementNoneDefined": "Messbaren Datentyp hinzufügen",
   "addMeasurementSaveButton": "Speichern",
