--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,7 +14,8 @@
   "completeHabitFailButton": "Fail",
   "completeHabitSkipButton": "Skip",
   "completeHabitSuccessButton": "Success",
-  "addMeasurementCancelButton": "Cancel",
+  "cancelButton": "Cancel",
+  "doneButton": "Done",
   "addMeasurementCommentLabel": "Comment",
   "addMeasurementDateLabel": "Observed at",
   "addMeasurementNoneDefined": "Add Measurable Data Type",
