--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -91,7 +91,7 @@
   "habitsShortStreaksEmptyHeader": "No three day streaks at the moment",
   "journalDateFromLabel": "Date from:",
   "journalDateInvalid": "Invalid Date Range",
-  "journalDateNowButton": "now",
+  "journalDateNowButton": "Now",
   "journalDateSaveButton": "SAVE",
   "journalDateSaveHint": "Save entry",
   "journalDateToLabel": "Date to:",
