Improved naming in habit definition

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -52,7 +52,7 @@
   "habitCategoryLabel": "Kategorie:",
   "habitCategoryHint": "Kategorie auswählen...",
   "habitPriorityLabel": "Priorität:",
-  "habitActiveFromLabel": "Erfolg erwartet ab",
+  "habitActiveFromLabel": "Beginn",
   "habitActiveUntilLabel": "Aktiv bis",
   "habitNotFound": "Habit nicht gefunden",
   "habitDeleteConfirm": "JA, HABIT löschen",
