--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -78,8 +78,8 @@
   "habitDeleteQuestion": "Do you want to delete this habit?",
   "habitShowFromLabel": "Show from",
   "habitsCompletedHeader": "Completed",
-  "habitsOpenHeader": "Open",
-  "habitsPendingLaterHeader": "Pending later",
+  "habitsOpenHeader": "Due now",
+  "habitsPendingLaterHeader": "Later today",
   "habitsSearchHint": "Search...",
   "habitsFilterOpenNow": "due",
   "habitsFilterPendingLater": "later",
