Change habit active status to archived status

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -48,7 +48,7 @@
   "fileMenuNewScreenshot": "Bildschirmfoto",
   "fileMenuNewTask": "Aufgabe",
   "fileMenuTitle": "Datei",
-  "habitActiveLabel": "Aktiv:",
+  "habitArchivedLabel": "Archiviert:",
   "habitCategoryLabel": "Kategorie:",
   "habitCategoryHint": "Kategorie auswählen...",
   "habitPriorityLabel": "Priorität:",
