Select dashboard to display during habit completion

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -51,6 +51,8 @@
   "habitArchivedLabel": "Archiviert:",
   "habitCategoryLabel": "Kategorie:",
   "habitCategoryHint": "Kategorie auswählen...",
+  "habitDashboardLabel": "Dashboard:",
+  "habitDashboardHint": "Dashboard auswählen...",
   "habitPriorityLabel": "Priorität:",
   "habitActiveFromLabel": "Beginn",
   "habitActiveUntilLabel": "Aktiv bis",
