--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,6 +26,8 @@
   "addTaskTitle": "Add Task",
   "categoryDeleteConfirm": "YES, DELETE THIS CATEGORY",
   "categoryDeleteQuestion": "Do you want to delete this category?",
+  "colorLabel": "Color:",
+  "colorPickerHint": "Enter HEX color or pick",
   "configFlagEnableNotifications": "Enable desktop notifications?",
   "configInvalidCert": "Allow invalid SSL certificate?",
   "configFlagPrivate": "Show private entries?",
