--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -28,6 +28,7 @@
   "categoryDeleteQuestion": "Do you want to delete this category?",
   "colorLabel": "Color:",
   "colorPickerHint": "Enter HEX color or pick",
+  "colorPickerError": "Invalid HEX color",
   "configFlagEnableNotifications": "Enable desktop notifications?",
   "configInvalidCert": "Allow invalid SSL certificate?",
   "configFlagPrivate": "Show private entries?",
