--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,8 +27,8 @@
   "categoryDeleteConfirm": "YES, DELETE THIS CATEGORY",
   "categoryDeleteQuestion": "Do you want to delete this category?",
   "colorLabel": "Color:",
-  "colorPickerHint": "Enter HEX color or pick",
-  "colorPickerError": "Invalid HEX color",
+  "colorPickerHint": "Enter Hex color or pick",
+  "colorPickerError": "Invalid Hex color",
   "configFlagEnableNotifications": "Enable desktop notifications?",
   "configInvalidCert": "Allow invalid SSL certificate?",
   "configFlagPrivate": "Show private entries?",
