Colors and whitespace

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -248,14 +248,15 @@
   "taskNameLabel": "Task:",
   "taskNotFound": "Task not found",
   "tasksSearchHint": "Search tasks...",
-  "taskStatusBlocked": "BLOCKED",
-  "taskStatusDone": "DONE",
-  "taskStatusGroomed": "GROOMED",
-  "taskStatusInProgress": "IN PROGRESS",
+  "taskStatusBlocked": "blocked",
+  "taskStatusDone": "done",
+  "taskStatusGroomed": "groomed",
+  "taskStatusInProgress": "in progress",
   "taskStatusLabel": "Task status:",
-  "taskStatusOnHold": "ON HOLD",
-  "taskStatusOpen": "OPEN",
-  "taskStatusRejected": "REJECTED",
+  "taskStatusOnHold": "on hold",
+  "taskStatusOpen": "open",
+  "taskStatusRejected": "rejected",
+  "taskStatusAll": "all",
   "viewMenuDisableBrightTheme": "Disable Bright Theme",
   "viewMenuEnableBrightTheme": "Enable Bright Theme",
   "viewMenuHideThemeConfig": "Hide Theme Config",
