Settings page for downloading and activating whisper models

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -164,6 +164,7 @@
   "settingsDashboardsSearchHint": "Search...",
   "settingsDashboardsTitle": "Dashboard Management",
   "settingsFlagsTitle": "Config Flags",
+  "settingsSpeechTitle": "Speech Settings",
   "settingsCategoriesTitle": "Categories",
   "settingsCategoriesNameLabel": "Category name:",
   "settingsCategoriesDuplicateError": "Category exists already",
