Journal tab renamed to Logbook

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -102,7 +102,7 @@
   "maintenanceStories": "Stories von verlinkten Einträgen zuweisen",
   "navTabTitleFlagged": "Markiert",
   "navTabTitleInsights": "Einsichten",
-  "navTabTitleJournal": "Journal",
+  "navTabTitleJournal": "Logbuch",
   "navTabTitleSettings": "Einstellungen",
   "navTabTitleTasks": "Aufgaben",
   "outboxMonitorLabelAll": "offen",
