--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -145,7 +145,7 @@
   "navTabTitleFlagged": "Flagged",
   "navTabTitleHabits": "Habits",
   "navTabTitleInsights": "Dashboards",
-  "navTabTitleJournal": "Journal",
+  "navTabTitleJournal": "Logbook",
   "navTabTitleSettings": "Settings",
   "navTabTitleTasks": "Tasks",
   "outboxMonitorLabelAll": "all",
