Fix locked db when importing from health

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -162,7 +162,7 @@
   "settingsConflictsTitle": "Sync Conflicts",
   "settingsConflictsResolutionTitle": "Sync Conflict Resolution",
   "settingsDashboardsSearchHint": "Search...",
-  "settingsDashboardsTitle": "Dashboard Management",
+  "settingsDashboardsTitle": "Dashboards",
   "settingsFlagsTitle": "Config Flags",
   "settingsSpeechTitle": "Speech Settings",
   "settingsCategoriesTitle": "Categories",
@@ -188,7 +188,7 @@
   "settingsMeasurablePrivateLabel": "Private: ",
   "settingsMeasurableSaveLabel": "Save",
   "settingsMeasurablesSearchHint": "Search...",
-  "settingsMeasurablesTitle": "Measurable Data Types",
+  "settingsMeasurablesTitle": "Measurable Types",
   "settingsMeasurableUnitLabel": "Unit abbreviation (optional):",
   "settingsPlaygroundTitle": "Developer Playground",
   "settingsPlaygroundTutorialTitle": "Run Sliding Tutorial",
